unpackaged/main/default/objects/Historical_Prior_Auth__c/Historical_Prior_Auth__c.object-meta.xml
<CustomObject>
    <label>Historical Prior Auth</label>
    <nameField>
        <displayFormat>HPA-{0000000}</displayFormat>
        <label>Historical Prior Auth Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Historical Prior Auth</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>