unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/COB_Code__c.field-meta.xml
<CustomField>
    <fullName>COB_Code__c</fullName>
    <label>COB Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>