unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/Contact_Drug__c.field-meta.xml
<CustomField>
    <fullName>Contact_Drug__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Drug</label>
    <referenceTo>Contact_Drug__c</referenceTo>
    <relationshipLabel>Historical Prior Auth</relationshipLabel>
    <relationshipName>Historical_Prior_Auth</relationshipName>
    <type>Lookup</type>
</CustomField>