unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/CSA_Number__c.field-meta.xml
<CustomField>
    <fullName>CSA_Number__c</fullName>
    <label>CSA Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>