unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/PA_Approval_Dates__c.field-meta.xml
<CustomField>
    <fullName>PA_Approval_Dates__c</fullName>
    <label>PA Approval Dates</label>
    <type>Date</type>
</CustomField>