unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/Patient_CUMB_ID__c.field-meta.xml
<CustomField>
    <fullName>Patient_CUMB_ID__c</fullName>
    <label>Patient CUMB ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>