unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/Patient_Gender__c.field-meta.xml
<CustomField>
    <fullName>Patient_Gender__c</fullName>
    <label>Patient Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>