unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/Patient_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Phone_Number__c</fullName>
    <label>Patient Phone Number</label>
    <type>Phone</type>
</CustomField>