unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/Prescriber_City__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_City__c</fullName>
    <label>Prescriber City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>