unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/Prescriber_Fax__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Fax__c</fullName>
    <label>Prescriber Fax</label>
    <type>Phone</type>
</CustomField>