unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/Prescriber_NPI_Number__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_NPI_Number__c</fullName>
    <label>Prescriber NPI Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>