unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/Prescriber_Practice_Name__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Practice_Name__c</fullName>
    <label>Prescriber Practice Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>