unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/Prescriber_State__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_State__c</fullName>
    <label>Prescriber State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>