unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/Prescriber_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Zip_Code__c</fullName>
    <label>Prescriber Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>