unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/Primary_Subscriber_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Primary_Subscriber_Relationship__c</fullName>
    <label>Primary Subscriber Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>