unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/Relationship_Code__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Code__c</fullName>
    <label>Relationship Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>