unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_End_Date__c</fullName>
    <label>Service End Date</label>
    <type>Date</type>
</CustomField>