unpackaged/main/default/objects/Historical_Prior_Auth__c/fields/Service_Provider_Specialty_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Specialty_Code__c</fullName>
    <label>Service Provider Specialty Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>