unpackaged/main/default/objects/Historical_Prior_Auth__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Error_Log__c</columns>
    <columns>HCPCS_Code__c</columns>
    <columns>SHA1Hash_ID__c</columns>
    <columns>Patient_CUMB_ID__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Contact_Drug__c</columns>
    <columns>Claim_Information__c</columns>
    <columns>Case__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>